# DroneUDE_FlairWs

./: LICENSE  README.md  build_AeroInes.sh  updload_PD_parrot.sh
FlairWs/flair-src/: CMakeLists.txt
FlairWs/flair-src/newInes/: CMakeLists.txt
FlairWs/flair-src/newInes/AeroInes/: CMakeLists.txt
FlairWs/flair-src/newInes/AeroInes/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/AeroInes/simulator/resources/core2-64/: simulator_x4.sh  simulator_x8.sh
FlairWs/flair-src/newInes/AeroInes/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/AeroInes/uav/resources/armv5te/: CircleFollower_minidrones.sh
FlairWs/flair-src/newInes/AeroInes/uav/resources/armv7a-neon/: CircleFollower_ardrone2.sh  CircleFollower_bebop.sh  CircleFollower_hdsx8.sh
FlairWs/flair-src/newInes/AeroInes/uav/resources/core2-64/: x4.sh  x4_intelaero.sh  x8.sh
FlairWs/flair-src/newInes/AeroInes/uav/src/: ParamSim.h  main.cpp
FlairWs/flair-src/newInes/AeroInes/uav/src/Control/: CMakeLists.txt  MyLaw.cpp  MyLaw.h  UDEdrone.cpp  UDEdrone.h
FlairWs/flair-src/newInes/AeroInes/uav/src/Observer/: CMakeLists.txt  StateSpace.cpp
FlairWs/flair-src/newInes/ElPalomito/: CMakeLists.txt
FlairWs/flair-src/newInes/ElPalomito/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/ElPalomito/simulator/resources/core2-64/: simulator_x4.sh  simulator_x4.xml  simulator_x8.sh
FlairWs/flair-src/newInes/ElPalomito/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/ElPalomito/uav/resources/armv5te/: CircleFollower_minidrones.sh
FlairWs/flair-src/newInes/ElPalomito/uav/resources/armv7a-neon/: CircleFollower_ardrone2.sh  CircleFollower_bebop.sh  CircleFollower_hdsx8.sh
FlairWs/flair-src/newInes/ElPalomito/uav/resources/core2-64/: x4.sh  x4_intelaero.sh  x8.sh
FlairWs/flair-src/newInes/ElPalomito/uav/src/: ParamSim.h
FlairWs/flair-src/newInes/ElPalomito/uav/src/Control/: MyLaw.cpp  MyLaw.h  UDEdrone.h
FlairWs/flair-src/newInes/PD_control/: CMakeLists.txt
FlairWs/flair-src/newInes/PD_control/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/PD_control/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/PD_control/uav/src/: ParamSim.h  main.cpp
FlairWs/flair-src/newInes/PID_test/: CMakeLists.txt
FlairWs/flair-src/newInes/PID_test/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/PID_test/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/PID_test/uav/src/: CircleFollower.cpp  CircleFollower.h
FlairWs/flair-src/newInes/Porfavor/: CMakeLists.txt
FlairWs/flair-src/newInes/Porfavor/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/Porfavor/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/Porfavor/uav/src/: DefineHandler.h  MyLaw.cpp  MyLaw.h  StateSpace.cpp  StateSpace.h  UDEdrone.cpp  UDEdrone.h  main.cpp
FlairWs/flair-src/newInes/Recompile_CircleFollower/: CMakeLists.txt
FlairWs/flair-src/newInes/Recompile_CircleFollower/simulator/: CMakeLists.txt
FlairWs/flair-src/newInes/Recompile_CircleFollower/uav/: CMakeLists.txt
FlairWs/flair-src/newInes/Recompile_CircleFollower/uav/src/: CircleFollower.cpp  CircleFollower.h  main.cpp
ModuleValidationWs/src/SS/: CMakeLists.txt  Drone.cpp  Drone.h  MyLaw.cpp  MyLaw.h  ParamSim.h  StateSpace.h  main.cpp
ModuleValidationWs/src/SS/Control/: CMakeLists.txt  Drone.cpp  Drone.h  MyLaw.cpp  MyLaw.h
ModuleValidationWs/src/SS/Observer/: CMakeLists.txt  ObserverBase.cpp  ObserverBase.h  StateSpace.cpp
ModuleValidationWs/src/SS/Observer/Luenberger/: CMakeLists.txt  Luenberger.cpp
ModuleValidationWs/src/SS/Observer/SlidingMode/: CMakeLists.txt  SlidingMode.cpp
ModuleValidationWs/src/SS/Observer/SuperTwist/: CMakeLists.txt
ModuleValidationWs/src/SS/Observer/UDE/: CMakeLists.txt  UDE.cpp
ModuleValidationWs/src/SS/SimData/: ControlData.csv  DebugUDE_rot.csv  DebugUDE_trans.csv  RealStateSpace_rot.csv  RealStateSpace_trans.csv  RotationalEstimation.csv  TranslationalEstimation.csv
ModuleValidationWs/src/SS/plots/: compare_states.py  plot_simulation.py
(+73 files in other folders)
